# tdd_django_converter

./: README.md  pyproject.toml
tdd_django_converter/: manage.py
tdd_django_converter/length/: forms.py  tests.py  urls.py  views.py
tdd_django_converter/length/templates/length/: convert.html
tdd_django_converter/tdd_django_converter/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_tdd_django_converter.py
