[tool.poetry]
name = "tdd-django-converter"
version = "0.1.0"
description = ""
authors = ["Paulo Roberto Cruz <paulo.cruz9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
